# shafu-formatter

./: README  formatter.py  justfile  main.py  pyproject.toml  test.py
.github/workflows/: test.yml
shafu_formatter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/shafu_formatter/: __init__.py  formatter.py  main.py
tests/: test.py
tests/0_before/: 00_simple_storage_vars.sol  03_simple_function.sol  05_simple_function_complex_math.sol  06_simple_function_modifier.sol  07_simple_function_insane_formatting.sol  08_imports.sol  09_complex_function.sol  10_constructor.sol  11_constructor2.sol  12_constructor3.sol  13_require.sol  14_struct.sol  15_assignment.sol
tests/1_after/: 00_simple_storage_vars.sol  03_simple_function.sol  04_simple_function_math.sol  05_simple_function_complex_math.sol  06_simple_function_modifier.sol  07_simple_function_insane_formatting.sol  08_imports.sol  09_complex_function.sol  10_constructor.sol  11_constructor2.sol  12_constructor3.sol  13_require.sol  14_struct.sol  15_assignment.sol
tests/after/: simple_function.sol  simple_storage_vars.sol  simple_storage_vars_two_blocks.sol
tests/before/: 04_simple_function_math.sol  simple_function.sol  simple_storage_vars.sol  simple_storage_vars_two_blocks.sol
