[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shafu-formatter"
version = "0.1.0"
description = "A simple Solidity formatter"
requires-python = ">=3.8"
dependencies = [
    "tree-sitter-solidity>=0.0.2",
    "tree-sitter>=0.21.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
shafu = "shafu_formatter.main:main" 
