[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shafu-formatter"
version = "0.1.0"
description = "A simple Solidity formatter"
requires-python = ">=3.8"
dependencies = [
    "solidity-parser>=0.1.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
shafu = "shafu_formatter.main:main"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "C", "N"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space" 
